# vazi

./: README.md
api/: Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt
api/api/: admin.py  auth.py  billing.py  dashboard.py  deps.py  projects.py  router.py
api/engine/: __init__.py  alerts.py  parser.py  runner.py  scorer.py
api/engine/providers/: __init__.py  base.py  gemini.py  openai.py  perplexity.py  serp.py
api/models/: __init__.py  base.py  citation.py  competitor.py  mention.py  project.py  query.py  result.py  run.py  user.py
api/schemas/: __init__.py  auth.py  billing.py  dashboard.py  project.py
api/services/: __init__.py  email.py  firebase.py  paystack.py  slack.py
api/worker/: __init__.py  beat.py  celery.py  tasks.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/layout/: AuthGuard.tsx  DashboardLayout.tsx
dashboard/src/hooks/: use-api.ts
dashboard/src/lib/: api.ts
dashboard/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
dashboard/src/pages/projects/: CompetitorsPage.tsx  MentionsPage.tsx  NewProjectPage.tsx  OverviewPage.tsx  ProjectsPage.tsx  RunsPage.tsx  SettingsPage.tsx  SourcesPage.tsx  TrendsPage.tsx
dashboard/src/pages/settings/: AccountPage.tsx
dashboard/src/stores/: auth.ts
